2013-03-25 Hirofumi Kosaka <kosaka@rworks.jp>

	* pandora_console_install: Fixed false recognition of RHEL6.4
	(it had been recoginzed as Ubuntu incorrecty because of its
	"/etc/lsb-release").

2013-03-25  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_manage_alert_list.php: Added description for
	threshold.

2013-03-22 Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/images/ajax-loader.gif, mobile/operation/events.php,
	mobile/include/ui.class.php, mobile/include/style/main.css: more
	changes in the events view.

2013-03-22 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/db/mysql.php: fixed the querys for the columns with
	empty string in the function
	"mysql_db_format_array_where_clause_sql".
	
	* include/functions_events.php: added lost parameter $similars in
	the function "events_change_owner".
	
	* operation/events/events.build_query.php: cleaned source code
	style.

2013-03-22  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_db.php: Always display the source ip address
	  when calling db_pandora_audit.

2013-03-22  Mario Pulido <mario.pulido@artica.es>

	* godmode/alerts/configure_alert_template.php,
	include/help/en/help_conf_alert_template.php,
        include/help/en/help_manage_alert_list.php,
        include/help/es/help_conf_alert_template.php,
        include/help/es/help_manage_alert_list.php,
        images/help/alert1.png,images/help/alert2.png: Added helps in alerts.

2013-03-22  Ramon Novoa  <rnovoa@artica.es>

	* operation/gis_maps/ajax.php,
	  godmode/agentes/agent_conf_gis.php: Fixed coordinate precision and
	  display order. Fixes bug #3608628.

2013-03-22  Junichi Satoh  <junichi@rworks.jp>

	* extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql: Added missing
	types.

2013-03-22  Junichi Satoh  <junichi@rworks.jp>

	* extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql: Fixed bad
	sql syntax.

2013-03-21 Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/operation/groups.php, mobile/operation/tactical.php,