@@ -139,6 +139,7 @@ define('AGENT_MODULE_STATUS_CRITICAL_BAD', 1);
 define('AGENT_MODULE_STATUS_CRITICAL_ALERT', 100);
 define('AGENT_MODULE_STATUS_NO_DATA', 4);
 define('AGENT_MODULE_STATUS_NORMAL', 0);
+define('AGENT_MODULE_STATUS_NOT_NORMAL', 6);
 define('AGENT_MODULE_STATUS_WARNING', 2);
 define('AGENT_MODULE_STATUS_UNKNOW', 3);
 define('AGENT_MODULE_STATUS_NOT_INIT', 5);
